INTERNAL: fix ORA-08177 - change isolation level to default for oracle (read...
INTERNAL: fix ORA-08177 - change isolation level to default for oracle (read commited) instead of serializable (SCBSD-1362)

Closes SCBSD-1362

Reviewed-by: Sławomir Korbas <skorbas@silenteight.com>
Reviewed-by: Witold Zegarowski <wzegarowski@silenteight.com>
Merged from: https://gitlab.silenteight.com/sens/scb-bridge/-/merge_requests/192